# exam_gen

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  Pipfile  README.md  getting-started.html  index.html  misc-notes.html  mkdocs.yml  quick_reference.html  setup.cfg  setup.py  sitemap.xml  tutorial.html
api/: exam.html
api/classroom/: answers.html  base.html  grade.html  rosters.html  scores.html  student.html
api/mixins/: prepare_attrs.html  settings.html
api/property/: answerable.html  auto_gradeable.html  buildable.html  document.html  format.html  gradeable.html  has_context.html  has_dir_path.html  has_metadata.html  has_rng.html  has_settings.html  has_user_setup.html  numbered.html  personalized.html  templated.html
api/util/: dynamic_call.html  selectors.html
docs/: __init__.py  index.md  misc-notes.md  quick_reference.md  tutorial.md
docs/api/: exam.md
docs/exam_admin/: canvas.md
docs/macros/: __init__.py  file_macros.py
docs/tutorial/: advanced_template_use.md  (+9 more)
exam_admin/: canvas.html
exam_gen/: __init__.py  cli.py  doc_mixins.py  student_inst.py  template_setting.py
old_docs/: misc-notes.md
search/: search_index.js
theme/: main.html
tutorial/: advanced_template_use.html  answers_and_scoring.html  classrooms_and_rosters.html  customization_and_randomization.html  env_setup.html  external_and_generated_assets.html  first_assignment.html  index.html  multi_part_questions.html  multiple_choice_questions.html  project_organization.html  writing_questions.html
user_guide/: exams.html  project_setup.html
(+168 files in other folders)
