[metadata]
name = exam_gen
version = 0.0.1
description = "EDSL for writing randomized exams and quizzes."

[options]
packages = exam_gen
install_requires =
   pipenv >= 11.9

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
files=best_practices,test
ignore_missing_imports=true

[tool:pytest]
testpaths=tests